@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class AuthenticationRepository
{
    + getCurrentUserSession()
}

class UserSession
{
    + isLoggedInWithRole()
    + getUserId()
}


class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAuthenticationRepository()
    + getVehiclesRepository()
}

class OrganizationRepository {
    + getOrganizationByUserEmail(email)
}

class Organization {
    - String name
    - String vatNumber
    - String phone
    - String email
    - Address postalAddress
    - addSkill(skill)
    - validateSkill(skill)
    + Organization(name, vatNumber, webSite, phone, email, postalAddress)
    - getUserByEmail(email)

}

class Employee {
    - String name
    - Date birthdate
    - Date admission date
    - Address postalAddress
    - String phone
    - String email
    - String ID doc type
    - String ID document number
    - String Taxpayer ID
    - Job job
    + CompareTo(TaxPayerID)
    + Clone()
    + toString()
    + hasThisEmail(mail)
    + addUpdatedTaskVehicles(task, vehicles)
    + validateTask(task, vehicles)
}

class EmployeeRepository{
    -EmployeeRepository()
    +addJob(Job job)
    +listEmployees()
    +emailExists(mail)
}

class VehicleRepository{
    -VehicleRepository()
    +listVehicles()

}

class Task{}

class Tasks{
    +filterThisGsmTasksInAgenda(userEmail):List<Tasks>
    +filterVehiclesNotAssignedByDateOfTask(task, vehicles):List<Tasks>
}



class AddVehiclesToTaskController {
    - AddVehiclesToTaskController(AuthenticationRepository, OrganizationRepository, EmployeeRepository, VehicleRepository)
    + listThisGsmTasksInAgenda()
    + listVehiclesNotAssignedByDateOfTasks()
    + updateTaskVehicles(task, vehicles)
}

note left of AddVehiclesToTaskController
    - userEmail and userRole is obtained
    from the user session.
end note


class AddVehiclesToTaskUI {
}

AddVehiclesToTaskUI .> AddVehiclesToTaskController

AddVehiclesToTaskController .> Repositories : repositories
AddVehiclesToTaskController.> AuthenticationRepository

Repositories -> Repositories : instance
Repositories --> "1" AuthenticationRepository
Repositories --> "1" EmployeeRepository
Repositories --> "1" VehicleRepository
Repositories --> "1" OrganizationRepository
OrganizationRepository --> "*" Organization : organizations
Organization "1" --> "1" EmployeeRepository
Organization "1" --> "*" Employee : employs

AuthenticationRepository -> "1" UserSession : usersession



EmployeeRepository "1" --> "*" Employee : aggregates

Employee "1" --> "1" VehicleRepository

Employee "1" -> "1" Tasks
Tasks "1" -> "*" Task




@enduml